--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,12 +4,12 @@
     <string name="next">NEXT</string>
     <string name="skip">SKIP</string>
     <string name="start">GOT IT</string>
-    <string name="slide_1_title">Daily Workout</string>
-    <string name="slide_1_desc">Set your daily workout routine by the help of trainer</string>
-    <string name="slide_2_title">Meditation Techniques </string>
-    <string name="slide_2_desc">Learn about the different meditation techniques and practice them</string>
-    <string name="slide_3_title">Diet Chart</string>
-    <string name="slide_3_desc">Make your diet chart by the help of health experts</string>
+    <string name="slide_1_title">Welcome to Azima</string>
+    <string name="slide_1_desc">Easy access to loans, anytime, anywhere</string>
+    <string name="slide_2_title">Application is quick </string>
+    <string name="slide_2_desc">Straight in to your mobile money account</string>
+    <string name="slide_3_title">Easy Payments</string>
+    <string name="slide_3_desc">Payback in easy installments over 4 weeks</string>
     <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
     <string name="play_again">Play Again</string>
 </resources>
