--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,9 @@
     <string name="slide_3_desc">Payback in easy installments over 4 weeks</string>
     <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
     <string name="play_again">Play Again</string>
+    <string name="create_account">Create Account</string>
+    <string name="email_address">Email Address</string>
+    <string name="full_names">Full Names</string>
+    <string name="identification_number">Identification Number</string>
+    <string name="telephone_number">Telephone Number</string>
 </resources>
